--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ p {
 .testimonialsitems:first-child {
   background-color: hsl(263, 55%, 52%);
   color: hsl(0, 0%, 100%);
+  background-image: url(/images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: top right 10%;
 }
 
 .testimonialsitems:nth-child(2) {
